syntax = "proto3";
package virtengine.market.v2beta1;

import "gogoproto/gogo.proto";

import "virtengine/market/v2beta1/bid.proto";
import "virtengine/market/v2beta1/lease.proto";
import "virtengine/market/v2beta1/types.proto";

option go_package = "github.com/virtengine/virtengine/sdk/go/node/market/v2beta1";

// MsgCreateLease is sent to create a lease.
message MsgCreateLease {
  option (gogoproto.equal)      = false;

  // BidId is the unique identifier of the Bid.
  BidID bid_id = 1 [
    (gogoproto.customname) = "BidID",
    (gogoproto.nullable)   = false,
    (gogoproto.jsontag)    = "id",
    (gogoproto.moretags)   = "yaml:\"id\""
  ];
}

// MsgCreateLeaseResponse is the response from creating a lease.
message MsgCreateLeaseResponse {}

// MsgWithdrawLease defines an SDK message for withdrawing lease funds.
message MsgWithdrawLease {
  option (gogoproto.equal) = false;

  // BidId is the unique identifier of the Bid.
  LeaseID id = 1 [
    (gogoproto.customname) = "ID",
    (gogoproto.nullable)   = false,
    (gogoproto.jsontag)    = "id",
    (gogoproto.moretags)   = "yaml:\"id\""
  ];
}

// MsgWithdrawLeaseResponse defines the Msg/WithdrawLease response type.
message MsgWithdrawLeaseResponse {}

// MsgCloseLease defines an SDK message for closing order.
message MsgCloseLease {
  option (gogoproto.equal) = false;

  // LeaseID is the unique identifier of the Lease.
  LeaseID id = 1 [
    (gogoproto.customname) = "ID",
    (gogoproto.nullable)   = false,
    (gogoproto.jsontag)    = "id",
    (gogoproto.moretags)   = "yaml:\"id\""
  ];

  LeaseClosedReason reason = 2 [
    (gogoproto.jsontag)  = "reason",
    (gogoproto.moretags) = "yaml:\"reason\""
  ];
}

// MsgCloseLeaseResponse defines the Msg/CloseLease response type.
message MsgCloseLeaseResponse {}
