// Package scale contains provider daemon stress tests.
// These tests simulate 1000+ concurrent providers bidding and processing orders.
//
// Task Reference: SCALE-001 - Load Testing - 1M Nodes Simulation
package scale

import (
	"context"
	"crypto/rand"
	"fmt"
	"runtime"
	"sync"
	"sync/atomic"
	"testing"
	"time"

	"github.com/stretchr/testify/require"
)

// ============================================================================
// Provider Stress Test Constants
// ============================================================================

const (
	// Target scale
	TargetProviderStressCount = 1000 // 1k+ concurrent providers
	TargetOrdersPerSecond     = 100  // Orders created per second
	TargetBidsPerProvider     = 20   // Bids per provider per second

	// Performance baselines
	ProviderBidLatencyP95     = 100 * time.Millisecond
	EventProcessingLatencyP95 = 50 * time.Millisecond
	ConnectionSetupTime       = 500 * time.Millisecond
)

// ProviderStressBaseline defines targets for provider stress tests
type ProviderStressBaseline struct {
	ProviderCount          int           `json:"provider_count"`
	BidLatencyP95          time.Duration `json:"bid_latency_p95"`
	BidLatencyP99          time.Duration `json:"bid_latency_p99"`
	EventProcessingP95     time.Duration `json:"event_processing_p95"`
	MinBidsPerSecond       float64       `json:"min_bids_per_second"`
	MaxEventBacklog        int           `json:"max_event_backlog"`
	MaxConcurrentBids      int           `json:"max_concurrent_bids"`
	ConnectionPoolSize     int           `json:"connection_pool_size"`
}

// DefaultProviderStressBaseline returns baseline for 1k providers
func DefaultProviderStressBaseline() ProviderStressBaseline {
	return ProviderStressBaseline{
		ProviderCount:          1000,
		BidLatencyP95:          100 * time.Millisecond,
		BidLatencyP99:          250 * time.Millisecond,
		EventProcessingP95:     50 * time.Millisecond,
		MinBidsPerSecond:       10000, // 10 bids/sec per provider * 1000 providers
		MaxEventBacklog:        10000,
		MaxConcurrentBids:      5000,
		ConnectionPoolSize:     100,
	}
}

// ============================================================================
// Mock Provider Types
// ============================================================================

// ProviderState represents provider operational state
type ProviderState uint8

const (
	ProviderIdle ProviderState = iota
	ProviderBidding
	ProviderProcessing
	ProviderFailed
)

// MockProvider simulates a provider daemon
type MockProvider struct {
	ID           [20]byte
	Address      string
	State        atomic.Uint32
	ActiveBids   atomic.Int32
	TotalBids    atomic.Int64
	FailedBids   atomic.Int64
	
	// Configuration
	MaxConcurrentBids int
	BidDelay          time.Duration
	FailureRate       float64
	
	// Metrics
	bidLatencies []time.Duration
	mu           sync.Mutex
	
	// Event processing
	eventQueue   chan *ProviderEvent
	ctx          context.Context
	cancel       context.CancelFunc
}

// ProviderEvent represents an event from the chain
type ProviderEvent struct {
	Type      string
	OrderID   uint64
	Timestamp time.Time
	Data      interface{}
}

// ProviderBidResult represents a bid attempt result
type ProviderBidResult struct {
	OrderID   uint64
	BidID     string
	Success   bool
	Error     error
	Latency   time.Duration
}

// NewMockProvider creates a new mock provider
func NewMockProvider(id int) *MockProvider {
	var addr [20]byte
	rand.Read(addr[:])
	
	ctx, cancel := context.WithCancel(context.Background())
	
	p := &MockProvider{
		ID:                addr,
		Address:           fmt.Sprintf("provider_%d", id),
		MaxConcurrentBids: 10,
		BidDelay:          5 * time.Millisecond,
		FailureRate:       0.01, // 1% failure rate
		eventQueue:        make(chan *ProviderEvent, 1000),
		bidLatencies:      make([]time.Duration, 0, 10000),
		ctx:               ctx,
		cancel:            cancel,
	}
	
	return p
}

// Start starts the provider event processing loop
func (p *MockProvider) Start() {
	go p.processEvents()
}

// Stop stops the provider
func (p *MockProvider) Stop() {
	p.cancel()
	close(p.eventQueue)
}

// processEvents processes incoming events
func (p *MockProvider) processEvents() {
	for {
		select {
		case <-p.ctx.Done():
			return
		case event, ok := <-p.eventQueue:
			if !ok {
				return
			}
			p.handleEvent(event)
		}
	}
}

// handleEvent handles a single event
func (p *MockProvider) handleEvent(event *ProviderEvent) {
	switch event.Type {
	case "order_created":
		p.handleOrderCreated(event)
	case "bid_accepted":
		// Handle bid acceptance
	case "lease_created":
		// Handle lease creation
	}
}

// handleOrderCreated handles new order events
func (p *MockProvider) handleOrderCreated(event *ProviderEvent) {
	// Check if we can bid
	if int(p.ActiveBids.Load()) >= p.MaxConcurrentBids {
		return
	}
	
	// Simulate bid processing
	p.ActiveBids.Add(1)
	defer p.ActiveBids.Add(-1)
	
	p.State.Store(uint32(ProviderBidding))
	defer p.State.Store(uint32(ProviderIdle))
	
	start := time.Now()
	
	// Simulate bid delay
	time.Sleep(p.BidDelay)
	
	// Simulate occasional failures
	b := make([]byte, 1)
	rand.Read(b)
	if float64(b[0])/256 < p.FailureRate {
		p.FailedBids.Add(1)
		return
	}
	
	latency := time.Since(start)
	
	p.mu.Lock()
	p.bidLatencies = append(p.bidLatencies, latency)
	p.mu.Unlock()
	
	p.TotalBids.Add(1)
}

// EnqueueEvent adds an event to the provider's queue
func (p *MockProvider) EnqueueEvent(event *ProviderEvent) error {
	select {
	case p.eventQueue <- event:
		return nil
	default:
		return fmt.Errorf("event queue full")
	}
}

// GetStats returns provider statistics
func (p *MockProvider) GetStats() (total, failed int64, latencies []time.Duration) {
	p.mu.Lock()
	defer p.mu.Unlock()
	return p.TotalBids.Load(), p.FailedBids.Load(), p.bidLatencies
}

// ProviderPool manages a pool of mock providers
type ProviderPool struct {
	providers []*MockProvider
	mu        sync.RWMutex
	
	// Metrics
	totalEvents    atomic.Int64
	droppedEvents  atomic.Int64
	processedBids  atomic.Int64
}

// NewProviderPool creates a new provider pool
func NewProviderPool(count int) *ProviderPool {
	pool := &ProviderPool{
		providers: make([]*MockProvider, count),
	}
	
	for i := 0; i < count; i++ {
		pool.providers[i] = NewMockProvider(i)
	}
	
	return pool
}

// Start starts all providers
func (p *ProviderPool) Start() {
	for _, provider := range p.providers {
		provider.Start()
	}
}

// Stop stops all providers
func (p *ProviderPool) Stop() {
	for _, provider := range p.providers {
		provider.Stop()
	}
}

// BroadcastEvent broadcasts an event to all providers
func (p *ProviderPool) BroadcastEvent(event *ProviderEvent) {
	p.totalEvents.Add(1)
	
	for _, provider := range p.providers {
		if err := provider.EnqueueEvent(event); err != nil {
			p.droppedEvents.Add(1)
		}
	}
}

// GetAggregateStats returns aggregate statistics
func (p *ProviderPool) GetAggregateStats() (totalBids, failedBids, droppedEvents int64, avgLatency time.Duration) {
	var allLatencies []time.Duration
	
	for _, provider := range p.providers {
		total, failed, latencies := provider.GetStats()
		totalBids += total
		failedBids += failed
		allLatencies = append(allLatencies, latencies...)
	}
	
	droppedEvents = p.droppedEvents.Load()
	avgLatency = averageDuration(allLatencies)
	
	return
}

// Count returns number of providers
func (p *ProviderPool) Count() int {
	return len(p.providers)
}

// ============================================================================
// Event Generator
// ============================================================================

// EventGenerator generates chain events for stress testing
type EventGenerator struct {
	rate       int // events per second
	pool       *ProviderPool
	ctx        context.Context
	cancel     context.CancelFunc
	generated  atomic.Int64
}

// NewEventGenerator creates a new event generator
func NewEventGenerator(rate int, pool *ProviderPool) *EventGenerator {
	ctx, cancel := context.WithCancel(context.Background())
	return &EventGenerator{
		rate:   rate,
		pool:   pool,
		ctx:    ctx,
		cancel: cancel,
	}
}

// Start starts generating events
func (g *EventGenerator) Start() {
	go func() {
		ticker := time.NewTicker(time.Second / time.Duration(g.rate))
		defer ticker.Stop()
		
		orderID := uint64(0)
		
		for {
			select {
			case <-g.ctx.Done():
				return
			case <-ticker.C:
				orderID++
				event := &ProviderEvent{
					Type:      "order_created",
					OrderID:   orderID,
					Timestamp: time.Now().UTC(),
				}
				g.pool.BroadcastEvent(event)
				g.generated.Add(1)
			}
		}
	}()
}

// Stop stops generating events
func (g *EventGenerator) Stop() {
	g.cancel()
}

// Generated returns number of events generated
func (g *EventGenerator) Generated() int64 {
	return g.generated.Load()
}

// ============================================================================
// Connection Pool Simulation
// ============================================================================

// ConnectionPool simulates gRPC connection pooling
type ConnectionPool struct {
	mu          sync.Mutex
	connections []*MockConnection
	available   chan *MockConnection
	maxSize     int
	
	// Metrics
	acquireCount   atomic.Int64
	releaseCount   atomic.Int64
	waitTime       []time.Duration
	waitMu         sync.Mutex
}

// MockConnection simulates a gRPC connection
type MockConnection struct {
	ID       int
	Active   bool
	Created  time.Time
	LastUsed time.Time
}

// NewConnectionPool creates a new connection pool
func NewConnectionPool(size int) *ConnectionPool {
	pool := &ConnectionPool{
		connections: make([]*MockConnection, size),
		available:   make(chan *MockConnection, size),
		maxSize:     size,
		waitTime:    make([]time.Duration, 0, 10000),
	}
	
	for i := 0; i < size; i++ {
		conn := &MockConnection{
			ID:      i,
			Active:  true,
			Created: time.Now(),
		}
		pool.connections[i] = conn
		pool.available <- conn
	}
	
	return pool
}

// Acquire acquires a connection from the pool
func (p *ConnectionPool) Acquire(timeout time.Duration) (*MockConnection, error) {
	start := time.Now()
	
	select {
	case conn := <-p.available:
		waitTime := time.Since(start)
		p.waitMu.Lock()
		p.waitTime = append(p.waitTime, waitTime)
		p.waitMu.Unlock()
		
		conn.LastUsed = time.Now()
		p.acquireCount.Add(1)
		return conn, nil
	case <-time.After(timeout):
		return nil, fmt.Errorf("connection pool timeout")
	}
}

// Release releases a connection back to the pool
func (p *ConnectionPool) Release(conn *MockConnection) {
	p.releaseCount.Add(1)
	p.available <- conn
}

// GetStats returns pool statistics
func (p *ConnectionPool) GetStats() (acquired, released int64, avgWait time.Duration) {
	p.waitMu.Lock()
	avgWait = averageDuration(p.waitTime)
	p.waitMu.Unlock()
	
	return p.acquireCount.Load(), p.releaseCount.Load(), avgWait
}

// ============================================================================
// Benchmarks
// ============================================================================

// BenchmarkProviderPoolStartup benchmarks provider pool startup
func BenchmarkProviderPoolStartup(b *testing.B) {
	sizes := []int{100, 500, 1000}
	
	for _, size := range sizes {
		b.Run(fmt.Sprintf("providers_%d", size), func(b *testing.B) {
			b.ResetTimer()
			for i := 0; i < b.N; i++ {
				pool := NewProviderPool(size)
				pool.Start()
				pool.Stop()
			}
		})
	}
}

// BenchmarkEventBroadcast benchmarks event broadcasting
func BenchmarkEventBroadcast(b *testing.B) {
	pool := NewProviderPool(100)
	pool.Start()
	defer pool.Stop()
	
	event := &ProviderEvent{
		Type:      "order_created",
		OrderID:   1,
		Timestamp: time.Now(),
	}
	
	b.ResetTimer()
	for i := 0; i < b.N; i++ {
		pool.BroadcastEvent(event)
	}
}

// BenchmarkConnectionPoolAcquireRelease benchmarks connection pool operations
func BenchmarkConnectionPoolAcquireRelease(b *testing.B) {
	pool := NewConnectionPool(100)
	
	b.ResetTimer()
	for i := 0; i < b.N; i++ {
		conn, _ := pool.Acquire(time.Second)
		pool.Release(conn)
	}
}

// BenchmarkConcurrentBidding benchmarks concurrent bidding simulation
func BenchmarkConcurrentBidding(b *testing.B) {
	providerCounts := []int{100, 500, 1000}
	
	for _, count := range providerCounts {
		b.Run(fmt.Sprintf("providers_%d", count), func(b *testing.B) {
			if count > 500 && testing.Short() {
				b.Skip("Skipping large provider count in short mode")
			}
			
			pool := NewProviderPool(count)
			pool.Start()
			defer pool.Stop()
			
			var orderID atomic.Uint64
			
			b.ResetTimer()
			b.RunParallel(func(pb *testing.PB) {
				for pb.Next() {
					id := orderID.Add(1)
					event := &ProviderEvent{
						Type:      "order_created",
						OrderID:   id,
						Timestamp: time.Now(),
					}
					pool.BroadcastEvent(event)
				}
			})
			
			totalBids, _, _, _ := pool.GetAggregateStats()
			b.ReportMetric(float64(totalBids)/b.Elapsed().Seconds(), "bids/sec")
		})
	}
}

// ============================================================================
// Stress Tests
// ============================================================================

// TestProviderStressBaseline tests provider operations at 1k scale
func TestProviderStressBaseline(t *testing.T) {
	if testing.Short() {
		t.Skip("Skipping provider stress test in short mode")
	}
	
	providerCount := 100 // 100 for CI, use 1000 for full test
	eventRate := 50      // 50 events/sec
	testDuration := 10 * time.Second
	
	t.Logf("=== Provider Stress Baseline Test ===")
	t.Logf("Providers: %d, Event rate: %d/sec, Duration: %v", providerCount, eventRate, testDuration)
	
	baseline := DefaultProviderStressBaseline()
	
	// Create and start provider pool
	pool := NewProviderPool(providerCount)
	pool.Start()
	defer pool.Stop()
	
	// Create event generator
	generator := NewEventGenerator(eventRate, pool)
	generator.Start()
	
	// Run for test duration
	time.Sleep(testDuration)
	generator.Stop()
	
	// Allow time for processing
	time.Sleep(time.Second)
	
	// Collect stats
	totalBids, failedBids, droppedEvents, avgLatency := pool.GetAggregateStats()
	generated := generator.Generated()
	
	bidsPerSecond := float64(totalBids) / testDuration.Seconds()
	failureRate := float64(failedBids) / float64(totalBids+failedBids) * 100
	
	t.Logf("Events generated: %d", generated)
	t.Logf("Total bids: %d (%.0f/sec)", totalBids, bidsPerSecond)
	t.Logf("Failed bids: %d (%.2f%%)", failedBids, failureRate)
	t.Logf("Dropped events: %d", droppedEvents)
	t.Logf("Average bid latency: %v", avgLatency)
	
	// Assertions
	require.Greater(t, bidsPerSecond, baseline.MinBidsPerSecond/10,
		"Bids per second should meet scaled threshold")
	require.Less(t, droppedEvents, int64(baseline.MaxEventBacklog),
		"Dropped events should be minimal")
}

// TestConnectionPoolStress tests connection pool under stress
func TestConnectionPoolStress(t *testing.T) {
	if testing.Short() {
		t.Skip("Skipping connection pool stress test in short mode")
	}
	
	poolSize := 50
	workerCount := 200
	duration := 5 * time.Second
	
	t.Logf("=== Connection Pool Stress Test ===")
	t.Logf("Pool size: %d, Workers: %d, Duration: %v", poolSize, workerCount, duration)
	
	pool := NewConnectionPool(poolSize)
	
	ctx, cancel := context.WithTimeout(context.Background(), duration)
	defer cancel()
	
	var wg sync.WaitGroup
	var acquired, timeouts atomic.Int64
	
	for i := 0; i < workerCount; i++ {
		wg.Add(1)
		go func() {
			defer wg.Done()
			for {
				select {
				case <-ctx.Done():
					return
				default:
					conn, err := pool.Acquire(100 * time.Millisecond)
					if err != nil {
						timeouts.Add(1)
						continue
					}
					
					acquired.Add(1)
					
					// Simulate work
					time.Sleep(time.Duration(1+randomInt(5)) * time.Millisecond)
					
					pool.Release(conn)
				}
			}
		}()
	}
	
	wg.Wait()
	
	acq, rel, avgWait := pool.GetStats()
	
	t.Logf("Connections acquired: %d", acquired.Load())
	t.Logf("Pool acquisitions: %d, releases: %d", acq, rel)
	t.Logf("Timeouts: %d", timeouts.Load())
	t.Logf("Average wait time: %v", avgWait)
	
	require.Equal(t, acq, rel, "Acquisitions and releases should match")
}

// TestProviderConcurrentBidding tests many providers bidding concurrently
func TestProviderConcurrentBidding(t *testing.T) {
	if testing.Short() {
		t.Skip("Skipping concurrent bidding test in short mode")
	}
	
	providerCount := 50
	ordersToProcess := 1000
	
	t.Logf("=== Provider Concurrent Bidding Test ===")
	t.Logf("Providers: %d, Orders: %d", providerCount, ordersToProcess)
	
	pool := NewProviderPool(providerCount)
	pool.Start()
	defer pool.Stop()
	
	// Generate orders rapidly
	start := time.Now()
	
	var wg sync.WaitGroup
	ordersPerWorker := ordersToProcess / runtime.NumCPU()
	
	for w := 0; w < runtime.NumCPU(); w++ {
		wg.Add(1)
		go func(workerID, startOrder int) {
			defer wg.Done()
			for i := 0; i < ordersPerWorker; i++ {
				event := &ProviderEvent{
					Type:      "order_created",
					OrderID:   uint64(startOrder + i),
					Timestamp: time.Now(),
				}
				pool.BroadcastEvent(event)
			}
		}(w, w*ordersPerWorker)
	}
	
	wg.Wait()
	broadcastTime := time.Since(start)
	
	// Wait for processing
	time.Sleep(2 * time.Second)
	
	totalBids, failedBids, droppedEvents, avgLatency := pool.GetAggregateStats()
	
	t.Logf("Broadcast time: %v (%.0f orders/sec)", broadcastTime, float64(ordersToProcess)/broadcastTime.Seconds())
	t.Logf("Total bids placed: %d", totalBids)
	t.Logf("Failed bids: %d", failedBids)
	t.Logf("Dropped events: %d", droppedEvents)
	t.Logf("Average bid latency: %v", avgLatency)
	
	expectedMinBids := int64(ordersToProcess * providerCount / 10) // At least 10% success
	require.Greater(t, totalBids, expectedMinBids,
		"Should process significant portion of bids")
}

// TestProviderBackpressure tests provider backpressure handling
func TestProviderBackpressure(t *testing.T) {
	if testing.Short() {
		t.Skip("Skipping backpressure test in short mode")
	}
	
	// Create a provider with limited queue
	provider := NewMockProvider(0)
	provider.eventQueue = make(chan *ProviderEvent, 100) // Small queue
	provider.BidDelay = 50 * time.Millisecond           // Slow processing
	provider.Start()
	defer provider.Stop()
	
	// Flood with events
	const eventCount = 1000
	var accepted, rejected int
	
	start := time.Now()
	for i := 0; i < eventCount; i++ {
		event := &ProviderEvent{
			Type:      "order_created",
			OrderID:   uint64(i),
			Timestamp: time.Now(),
		}
		if err := provider.EnqueueEvent(event); err != nil {
			rejected++
		} else {
			accepted++
		}
	}
	floodTime := time.Since(start)
	
	// Wait for processing
	time.Sleep(time.Second)
	
	total, failed, _ := provider.GetStats()
	
	t.Logf("=== Provider Backpressure Test ===")
	t.Logf("Events sent: %d in %v", eventCount, floodTime)
	t.Logf("Accepted: %d, Rejected: %d", accepted, rejected)
	t.Logf("Processed: %d, Failed: %d", total, failed)
	
	// Backpressure should cause some rejections but also accept queue capacity
	require.Greater(t, rejected, 0, "Should reject some events under pressure")
	require.Greater(t, accepted, 0, "Should accept at least queue capacity")
	require.LessOrEqual(t, accepted, 100+10, "Accepted should be near queue capacity")
}

// TestProviderResourceContention tests resource contention under load
func TestProviderResourceContention(t *testing.T) {
	if testing.Short() {
		t.Skip("Skipping resource contention test in short mode")
	}
	
	providerCount := 20
	sharedResourceCount := 5
	testDuration := 5 * time.Second
	
	t.Logf("=== Provider Resource Contention Test ===")
	t.Logf("Providers: %d, Shared resources: %d", providerCount, sharedResourceCount)
	
	// Simulate shared resources (like database connections)
	resources := make(chan int, sharedResourceCount)
	for i := 0; i < sharedResourceCount; i++ {
		resources <- i
	}
	
	ctx, cancel := context.WithTimeout(context.Background(), testDuration)
	defer cancel()
	
	var wg sync.WaitGroup
	var acquired, contentionEvents atomic.Int64
	var waitTimes []time.Duration
	var waitMu sync.Mutex
	
	for i := 0; i < providerCount; i++ {
		wg.Add(1)
		go func(providerID int) {
			defer wg.Done()
			
			for {
				select {
				case <-ctx.Done():
					return
				default:
					start := time.Now()
					
					// Try to acquire resource
					select {
					case res := <-resources:
						waitTime := time.Since(start)
						waitMu.Lock()
						waitTimes = append(waitTimes, waitTime)
						waitMu.Unlock()
						
						acquired.Add(1)
						
						// Simulate work
						time.Sleep(time.Duration(5+randomInt(10)) * time.Millisecond)
						
						// Release
						resources <- res
						
					case <-time.After(10 * time.Millisecond):
						contentionEvents.Add(1)
					}
				}
			}
		}(i)
	}
	
	wg.Wait()
	
	avgWait := averageDuration(waitTimes)
	p95Wait, _ := calculateDurationPercentiles(waitTimes)
	
	t.Logf("Resource acquisitions: %d", acquired.Load())
	t.Logf("Contention events: %d", contentionEvents.Load())
	t.Logf("Average wait time: %v", avgWait)
	t.Logf("P95 wait time: %v", p95Wait)
	
	contentionRate := float64(contentionEvents.Load()) / float64(acquired.Load()+contentionEvents.Load()) * 100
	t.Logf("Contention rate: %.2f%%", contentionRate)
}
